# python-conways-game-of-life

./: .gitignore  README.md  pyproject.toml
python_conways_game_of_life/: main.py
